gitops/apps/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: shows
              mountPath: /shows
            - name: movies
              mountPath: /movies
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "3000m"
              memory: "4Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: movies
          persistentVolumeClaim:
            claimName: pvc-jellyfin-media-movies
        - name: shows
          persistentVolumeClaim:
            claimName: pvc-jellyfin-media-shows
